# opentxs-notary

./: .clang-format  .cmake-format.py  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  ChangeLog  Makefile.am  README.md  configure.ac  opentxs-server.spec.in
.github/workflows/: compile.yml  format.yml  iwyu.yml
cmake/: Findopentxs.cmake  windll.rc.in  winexe.rc.in
docs/: INSTALL-Debian_Ubuntu.txt  INSTALL-Fedora.txt  INSTALL-MacOSX.txt  INSTALL-RedHat_CentOS.txt  INSTALL-openSUSE.txt
scripts/: install_sample_data.sh
scripts/git_hooks/: pre-commit  pre-push
scripts/travis/: build_tar.sh  clang-format-checker.sh  clang-format-wrapper.sh  cppcheck_wrapper.sh  install-deps.sh  install-opentxs.sh
src/: AcctFunctor_PayDividend.cpp  AcctFunctor_PayDividend.hpp  CMakeLists.txt  ClientConnection.cpp  ClientConnection.hpp  MessageProcessor.cpp  MessageProcessor.hpp  OTClientConnection.cpp  OTClientConnection.hpp  OTServer.cpp  OTServer.hpp  ServerLoader.hpp  main.cpp  testserver.cpp
src/base/: AcctFunctor_PayDividend.cpp  AcctFunctor_PayDividend.hpp  CMakeLists.txt  ClientConnection.cpp  ConfigLoader.cpp  ConfigLoader.hpp  Helpers.hpp  Macros.hpp  MainFile.cpp  MainFile.hpp  MessageProcessor.cpp  MessageProcessor.hpp  Notary.cpp  Notary.hpp  OTServer.cpp  OTServer.hpp  ServerLoader.hpp  ServerSettings.cpp  ServerSettings.hpp  Transactor.cpp  Transactor.hpp  UserCommandProcessor.cpp  UserCommandProcessor.hpp
src/createmint/: CMakeLists.txt  main.cpp
src/createmint/.deps/: createmint-main.Po
src/notary/: CMakeLists.txt  Client.cpp  Client.hpp  main.cpp
src/server/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  Test_Example.cpp
tools/cmake/: opentxs-notary-configure-target.cmake  opentxs-notary-print-build-details.cmake
tools/docker/: Dockerfile  README.md  compile  docker-bake.hcl  download  downloader  run
tools/iwyu/: mapping_file
